# Zahid1

./: .dockerignore  .gitignore  .grok  .langchain  .llamacloud  README.md  activate_env.sh  build_and_run_docker.sh  chainlit.md  environment.yml  fail_embed.pkl  fixes  general_embeds.pkl  notes.md  pyproject.toml  requirements.txt  stop_docker.sh  text.ipynb
.chainlit/: config.toml
deployment/docker/: Dockerfile
secrets/: .aws  .azure  .huggingface  .openai  .pinecone  vertex.json
src/: app.py  app_streamlit.py  eval.py
src/client/: __init__.py  conn.py
src/conf/: agent.yaml  temp.yaml
src/conf/protocol/client/: az-gpt35-az-ada002-hf-rerank.yaml  az-gpt35-hf-bgem3-hf-rerank.yaml  grok-llama70B-vx-gecko-hf-rerank.yaml  oai-gpt35-oai-ada002-hf-rerank.yaml  oai-gpt35-vx-gecko-hf-rerank.yaml  oai-gpt4-oai-ada002-hf-rerank.yaml  oai-gpt4-vx-gecko-hf-rerank.yaml  vx-bison-vx-gecko-hf-rerank.yaml  vx-gemini-vx-gecko-hf-rerank.yaml
src/conf/protocol/parser/: base.yaml
src/hub/: pipeline.py
src/node/: __init__.py  reader.py
src/parser/: __init__.py  extractors.py  loader.py
src/session/: user.py
src/template/: __init__.py  prompt.py  system.py
src/utils/: methods.py
