[tool.poetry]
name = "ragent"
version = "0.2.0"
description = ""
authors = ["Sithael <chojnacki.jamie@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "~3.11"
python-dotenv = "^1.0.1"
langchain = "^0.1.12"
llama-index = "0.10.28"
llama-index-embeddings-azure-openai = "^0.1.6"
llama-index-llms-azure-openai = "^0.1.5"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-embeddings-instructor = "^0.1.3"
llama-index-graph-stores-neo4j = "^0.1.3"
llama-index-llms-huggingface = "^0.1.4"
transformers = "^4.39.3"
sentence-transformers = "^2.6.1"
torch = "^2.2.2"
pymupdf = "^1.24.0"
loguru = "^0.7.2"
chainlit = "1.0.501"
llama-parse = "^0.4.0"
trulens-eval = "^0.28.0"
google-cloud-storage = "^2.16.0"
watchdog = "^4.0.0"
click = "^8.1.7"
llama-index-llms-vertex = "^0.1.5"
llama-index-llms-openai = "^0.1.16"
llama-index-embeddings-vertex = "^0.1.0"
pinecone-client = ">=3.0.2,<4.0.0"
llama-index-llms-gemini = "^0.1.7"
llama-index-vector-stores-pinecone = "^0.1.6"
llama-index-embeddings-openai = "^0.1.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
